# vaulttask

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md  label.config.psd1
.github/workflows/: ci.yml
settings/: default.yml
src/: cli.rs  commands.rs  config.rs  main.rs  settings.rs  tags.rs  task.rs
src/command/: mod.rs  vault.rs
src/config/: mod.rs  task.rs  vault.rs
src/data/: id.rs  mod.rs  parser.rs  tag.rs  task.rs
src/task/: id.rs  mod.rs  parser.rs  tag.rs
