[package]
authors = ["Timothy Aldrich <timothy.r.aldrich@gmail.com"]
categories = ["command-line-utilities"]
description = "A task management application using markdown files"
homepage = "https://github.com/aldrichtr/vtask"
license = "MIT"
name = "vtask"
repository = "https://github.com/aldrichtr/vtask"
build = "build/main.rs"
version = "0.1.0"
edition = "2021"


[dependencies]
clap_complete = { version = "4.5.8", optional = true }
etcetera = "0.8.0"
glob = "0.3.1"
once_cell = "1.19.0"
serde = "1.0.204"
serde_derive = "1.0.204"

[dependencies.shellexpand]
version = "3.1.0"
default-features = true
features = ["full", "path"]

[dependencies.confy]
version = "0.6.1"
features = ["yaml_conf"]
default-features = false

[dependencies.clap]
version = "4.5.8"
features = ["suggestions", "color", "wrap_help", "cargo", "derive"]
