[package]
authors = ["Timothy Aldrich <timothy.r.aldrich@gmail.com"]
categories = ["command-line-utilities"]
description = "A task management application using markdown files"
homepage = "https://github.com/aldrichtr/vtask"
license = "MIT"
name = "vtask"
repository = "https://github.com/aldrichtr/vtask"
build = "build/main.rs"
version = "0.1.0"
edition = "2021"


[dependencies]
chrono = "0.4.38"
etcetera = "0.8.0"
glob = "0.3.1"
serde = "1.0.204"
serde_derive = "1.0.204"
nanoid = "0.4.0"

[dependencies.uuid]
version = "1.10.0"
features = ["v4", "fast-rng"]

[dependencies.shellexpand]
version = "3.1.0"
default-features = true
features = ["full", "path"]

[features]
clap_complete = ["dep:clap_complete"]

[dependencies.confy]
version = "0.6.1"
features = ["yaml_conf"]
default-features = false

[dependencies.clap]
version = "4.5.8"
features = ["suggestions", "color", "wrap_help", "cargo", "derive"]

[dependencies.clap_complete]
version = "4.5.8"
optional = true
