[package]
authors = ["Timothy Aldrich <timothy.r.aldrich@gmail.com"]
categories = ["command-line-utilities"]
description = "A task management application using markdown files"
homepage = "https://github.com/aldrichtr/vtask"
license = "MIT"
name = "vtask"
repository = "https://github.com/aldrichtr/vtask"
build = "build/main.rs"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = "1.0.204"
serde_derive = "1.0.204"
# file system and paths
etcetera = "0.8.0"
shellexpand = { version = "3.1.0", default-features = true, features = ["full", "path"] }
glob = "0.3.1"

# Task components
## date/time calc
chrono = { version = "0.4.38", features = ["serde"] }
## for task ids
nanoid = "0.4.0"
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }

# markdown processing
markdown-it = "0.6.1"
markdown-it-tasklist = "0.2.0"
markdown-it-front-matter = "0.3.0"
serde_yml = "0.0.11"

# configuration
confy = { version = "0.6.1", features = ["yaml_conf"], default-features = false }
clap = { version = "4.5.8", features = ["suggestions", "color", "wrap_help", "cargo", "derive"] }
clap_complete = { version = "4.5.8", optional = true }

# logging
swing = "0.1"
log = "0.4"
thiserror = "1.0.63"
